--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     <title>푸디트리</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>You need to enable JavaScript to run this app.!!!!!!!test</noscript>
     <div id="root"></div>
     <div id="modal-root"></div>
     <!--
