--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.!!!!!!!test</noscript>
+    <noscript>Hello World</noscript>
     <div id="root"></div>
     <div id="modal-root"></div>
     <!--
