--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon_dark.ico"  type="image/x-icon"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="description" content="음식을 낭비하지 않고 탄소 배출을 줄여, 지구를 지키는 푸디트리의 여정에 동참하세요!">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/greenlogo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
